refactoring + added TellMe Settings Action

--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -32,7 +32,7 @@
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
-				<ResourceDictionary Source="../Controls/ProgressIndicator.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/ProgressIndicator.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<Style TargetType="Image">
@@ -80,24 +80,24 @@
 					<Image.Style>
 						<Style TargetType="Image">
 							<Setter Property="Source"
-									Value="../Resources/lwLogo_Main.png" />
+									Value="pack://application:,,,/LanguageWeaverProvider;component/Resources/lwLogo_Main.png" />
 							<Setter Property="RenderOptions.BitmapScalingMode"
 									Value="HighQuality" />
 							<Style.Triggers>
 								<DataTrigger Binding="{Binding IsServiceSelected}"
 											 Value="True">
 									<Setter Property="Source"
-											Value="../Resources/lwLogo_Main.png" />
+											Value="pack://application:,,,/LanguageWeaverProvider;component/Resources/lwLogo_Main.png" />
 								</DataTrigger>
 								<DataTrigger Binding="{Binding IsCloudSelected}"
 											 Value="True">
 									<Setter Property="Source"
-											Value="../Resources/lwLogo_Cloud.png" />
+											Value="pack://application:,,,/LanguageWeaverProvider;component/Resources/lwLogo_Cloud.png" />
 								</DataTrigger>
 								<DataTrigger Binding="{Binding IsEdgeSelected}"
 											 Value="True">
 									<Setter Property="Source"
-											Value="../Resources/lwLogo_Edge.png" />
+											Value="pack://application:,,,/LanguageWeaverProvider;component/Resources/lwLogo_Edge.png" />
 								</DataTrigger>
 							</Style.Triggers>
 						</Style>
