--- a/LanguageWeaverProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
+++ b/LanguageWeaverProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="LanguageWeaverProvider.View.LanguageMappingProviderView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+﻿<Window x:Class="LanguageWeaverProvider.LanguageMappingProvider.View.LanguageMappingProviderView"
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:styles="clr-namespace:LanguageWeaverProvider.Style"
 		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-		xmlns:viewmodel="clr-namespace:LanguageWeaverProvider.ViewModel"
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
+		xmlns:viewmodel="clr-namespace:LanguageWeaverProvider.LanguageMappingProvider.ViewModel"
 		mc:Ignorable="d"
 		d:DataContext="{d:DesignInstance viewmodel:LanguageMappingProviderViewModel}"
 		Title="Language Mapping"
@@ -18,15 +18,15 @@
 		Width="800"
 		MinHeight="400"
 		Height="600">
-	
+
 	<Window.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/DataGridResources.xaml" />
 				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/WindowsBorder.xaml" />
-				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
 				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/ProgressIndicator.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<Style TargetType="Image">
@@ -35,7 +35,7 @@
 			</Style>
 
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibility" />
-			
+
 		</ResourceDictionary>
 	</Window.Resources>
 
@@ -56,7 +56,7 @@
 
 			<styles:WindowsControl Grid.Row="0"
 								   Grid.ColumnSpan="2"
-								   Margin="0 20 0 0" />
+								   Margin="0 16 0 8" />
 
 			<TextBlock Grid.Row="1"
 					   Text="The Language Mapping feature allows users to align unrecognised or new language codes coming from the machine translation engine with a recognised language in Trados Studio, enabling translation where it otherwise wouldn't be possible."
@@ -65,11 +65,12 @@
 					   FontWeight="DemiBold"
 					   Focusable="True"
 					   TextWrapping="Wrap"
-					   Margin="16 4 16 0"/>
+					   Margin="16 8 16 0" />
 
 			<TextBox Grid.Row="1"
 					 Grid.Column="1"
 					 Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"
+					 AutomationProperties.Name="{x:Static root:PluginResources.LMPView_SearchBox}"
 					 Style="{StaticResource WatermarkTextBox}"
 					 BorderBrush="#FFBFCDD4"
 					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.LMPView_SearchBox}"
@@ -80,12 +81,12 @@
 					 VerticalAlignment="Bottom"
 					 Width="232"
 					 Height="24"
-					 Margin="16 4" />
+					 Margin="16 4">
+			</TextBox>
 
-			<DataGrid 
-					  Grid.Row="2"
+			<DataGrid Grid.Row="2"
 					  Grid.ColumnSpan="2"
-				ItemsSource="{Binding FilteredMappedLanguages}"
+					  ItemsSource="{Binding FilteredMappedLanguages}"
 					  SelectedItem="{Binding SelectedMappedLanguage}"
 					  Style="{StaticResource Sdl.DataGrid.GenericStyle}"
 					  Visibility="{Binding LoadingAction, Converter={StaticResource EmptyStringToVisibility}, ConverterParameter=Inverted}"
@@ -120,26 +121,20 @@
 			</DataGrid>
 
 			<controls:ProgressIndicator Grid.Row="2"
+										Grid.ColumnSpan="2"
 										Text="{Binding LoadingAction}"
 										Visibility="{Binding LoadingAction, Converter={StaticResource EmptyStringToVisibility}}"
 										VerticalAlignment="Center" />
 
-			<StackPanel Grid.Row="3"
-						Grid.ColumnSpan="2"
-						Orientation="Horizontal"
-						Margin="16 4">
-				<TextBlock Text="{x:Static root:PluginResources.LMPView_Languages_TotalCount}" />
-
-				<TextBlock Text="{Binding MappedLanguages.Count}"
-						   Margin="2 0 0 0" />
-
-				<TextBlock Text="{x:Static root:PluginResources.LMPView_Languages_Filtered}"
-						   Visibility="{Binding Filter, Converter={StaticResource EmptyStringToVisibility}, ConverterParameter=Inverted}" />
-
-				<TextBlock Text="{Binding FilteredMappedLanguages.Count}"
-						   Visibility="{Binding Filter, Converter={StaticResource EmptyStringToVisibility}, ConverterParameter=Inverted}"
-						   Margin="2 0 0 0" />
-			</StackPanel>
+			<TextBlock Grid.Row="3"
+					   Grid.ColumnSpan="2"
+					   Focusable="True"
+					   Margin="16 4">
+				<Run Text="{x:Static root:PluginResources.LMPView_Languages_TotalCount}" />
+				<Run Text="{Binding MappedLanguages.Count, Mode=OneWay}" />
+				<Run Text="{x:Static root:PluginResources.LMPView_Languages_Filtered}"/>
+				<Run Text="{Binding FilteredMappedLanguages.Count, Mode=OneWay}" />
+			</TextBlock>
 
 			<Separator Grid.Row="4"
 					   Grid.ColumnSpan="2"
