--- a/LanguageWeaverProvider/Studio/AccountSubscription/View/AccountSubscriptionView.xaml
+++ b/LanguageWeaverProvider/Studio/AccountSubscription/View/AccountSubscriptionView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="LanguageWeaverProvider.View.AccountSubscriptionView"
+﻿<UserControl x:Class="LanguageWeaverProvider.Studio.AccountSubscription.View.AccountSubscriptionView"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
 			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
+			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.Studio.AccountSubscription.ViewModel"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 d:DataContext="{d:DesignInstance viewModel:AccountSubscriptionViewModel}"
 			 mc:Ignorable="d"
