--- a/LanguageWeaverProvider/Studio/Actions/View/CreateDictionaryTermView.xaml
+++ b/LanguageWeaverProvider/Studio/Actions/View/CreateDictionaryTermView.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="LanguageWeaverProvider.View.CreateDictionaryTermView"
+﻿<Window x:Class="LanguageWeaverProvider.Studio.Actions.View.CreateDictionaryTermView"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-		xmlns:viewModels="clr-namespace:LanguageWeaverProvider.ViewModel"
 		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
+		xmlns:viewModels="clr-namespace:LanguageWeaverProvider.Studio.Actions.ViewModel"
 		d:DataContext="{d:DesignInstance viewModels:CreateDictionaryTermViewModel}"
 		MouseLeftButtonDown="Window_MouseLeftButtonDown"
 		WindowStartupLocation="CenterScreen"
@@ -24,10 +24,10 @@
 	<Window.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
@@ -68,7 +68,7 @@
 				  Background="#ffffff">
 				<Image HorizontalAlignment="Left"
 					   VerticalAlignment="Center"
-					   Source="../Resources/lwHeader_Main.png"
+					   Source="pack://application:,,,/LanguageWeaverProvider;component/Resources/lwHeader_Main.png"
 					   Width="240"
 					   Margin="4 0" />
 			</Grid>
