--- a/LanguageWeaverProvider/Studio/BatchTask/View/CreateQeReportView.xaml
+++ b/LanguageWeaverProvider/Studio/BatchTask/View/CreateQeReportView.xaml
@@ -1,11 +1,9 @@
-﻿<UserControl x:Class="LanguageWeaverProvider.View.CreateQeReportView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-			 xmlns:root="clr-namespace:LanguageWeaverProvider"
-			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
-			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
+﻿<UserControl x:Class="LanguageWeaverProvider.Studio.BatchTask.View.CreateQeReportView"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.Studio.BatchTask.ViewModel"
 			 d:DataContext="{d:DesignInstance viewModel:CreateQeReportViewModel}"
 			 mc:Ignorable="d"
 			 d:DesignHeight="450"
@@ -18,38 +16,29 @@
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/GroupBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
-
-			<Style TargetType="Image">
-				<Setter Property="RenderOptions.BitmapScalingMode"
-						Value="HighQuality" />
-				<Setter Property="Width"
-						Value="20" />
-				<Setter Property="Height"
-						Value="20" />
-			</Style>
 		</ResourceDictionary>
 	</UserControl.Resources>
-	
+
 	<Grid Margin="8">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
-		
+
 		<GroupBox Style="{StaticResource Sdl.GroupBox.SingleLineStyle}"
 				  Padding="8 16">
 			<GroupBox.Header>
 				<TextBlock Text="Segments"
-						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}" 
+						   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 						   FontSize="14"
-						   Margin="4 0"/>
+						   Margin="4 0" />
 			</GroupBox.Header>
 			<CheckBox x:Uid="excludeTags"
 					  x:Name="excludeTags"
-					  Content="Exclude locked segments from report." 
+					  Content="Exclude locked segments from report."
 					  IsChecked="{Binding ExcludeLockedSegments}"
 					  Style="{StaticResource Sdl.Checkbox.GenericStyle}"
-					  FontSize="12"/>
+					  FontSize="12" />
 		</GroupBox>
 	</Grid>
 </UserControl>
