--- a/LanguageWeaverProvider/Studio/FeedbackController/View/FeedbackView.xaml
+++ b/LanguageWeaverProvider/Studio/FeedbackController/View/FeedbackView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="LanguageWeaverProvider.View.FeedbackView"
+﻿<UserControl x:Class="LanguageWeaverProvider.Studio.FeedbackController.View.FeedbackView"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
-			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
+			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.Studio.FeedbackController.ViewModel"
 			 d:DataContext="{d:DesignInstance viewModel:FeedbackViewModel}"
 			 mc:Ignorable="d"
 			 d:DesignHeight="450"
@@ -14,13 +14,13 @@
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/CheckBoxResources.xaml" />
-				<ResourceDictionary Source="../Style/Buttons.xaml" />
-				<ResourceDictionary Source="../Controls/WatermarkTextBoxResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ComboBoxResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Style/Buttons.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<converters:BooleanToVisibilityConverter x:Key="BooleanVisibility" />
