--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -89,16 +89,10 @@
 				Margin="0 4" />
 
 		<!-- Host + port -->
-		<TextBlock Grid.Row="3"
-				   Text="Host"
-				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-				   Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				   VerticalAlignment="Center"
-				   Margin="32 8"
-				   Focusable="True" />
-		
 		<TextBox Grid.Row="3"
 				 Grid.Column="1"
+				 AutomationProperties.AutomationId="Host"
+				 AutomationProperties.Name="Host"
 				 Text="{Binding Host, UpdateSourceTrigger=PropertyChanged}"
 				 Style="{StaticResource WatermarkTextBox}"
 				 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_Host}"
@@ -112,16 +106,10 @@
 		<!-- Host + port -->
 		
 		<!-- Username -->
-		<TextBlock Grid.Row="4"
-				   Text="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
-				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-				   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				   VerticalAlignment="Center"
-				   Margin="32 8"
-				   Focusable="True" />
-		
 		<TextBox Grid.Row="4"
 				 Grid.Column="1"
+				 AutomationProperties.AutomationId="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
+				 AutomationProperties.Name="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
 				 Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
 				 Style="{StaticResource WatermarkTextBox}"
 				 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
@@ -135,18 +123,12 @@
 		<!-- Username -->
 
 		<!-- Password -->
-		<TextBlock Grid.Row="5"
-				   Text="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
-				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-				   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				   VerticalAlignment="Center"
-				   Margin="32 0 32 16"
-				   Focusable="True" />
-		
 		<PasswordBox Grid.Row="5"
 					 Grid.ColumnSpan="2"
 					 x:Name="userPwBox"
 					 PasswordChanged="UserPassword_Changed"
+					 AutomationProperties.AutomationId="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
+					 AutomationProperties.Name="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
 					 Style="{StaticResource WatermarkPasswordBox}"
 					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
 					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -155,18 +137,12 @@
 		<!-- Password -->
 
 		<!-- API Key -->
-		<TextBlock Grid.Row="6"
-				   Text="{x:Static root:PluginResources.Auth_Edge_APIKey}"
-				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-				   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
-				   VerticalAlignment="Center"
-				   Margin="32 0 32 16"
-				   Focusable="True" />
-		
 		<PasswordBox Grid.Row="6"
 					 Grid.ColumnSpan="2"
 					 x:Name="apiKeyBox"
 					 PasswordChanged="ApiKey_Changed"
+					 AutomationProperties.AutomationId="{x:Static root:PluginResources.Auth_Edge_APIKey}"
+					 AutomationProperties.Name="{x:Static root:PluginResources.Auth_Edge_APIKey}"
 					 Style="{StaticResource WatermarkPasswordBox}"
 					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_APIKey}"
 					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
