--- a/LanguageWeaverProvider/Style/WindowsControl.xaml
+++ b/LanguageWeaverProvider/Style/WindowsControl.xaml
@@ -1,46 +1,6 @@
 ﻿<UserControl x:Class="LanguageWeaverProvider.Style.WindowsControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-			 xmlns:root="clr-namespace:LanguageWeaverProvider"
-             mc:Ignorable="d">
-
-	<UserControl.Resources>
-		<ResourceDictionary>
-			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="General.xaml"/>
-				<ResourceDictionary Source="Buttons.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml"/>
-			</ResourceDictionary.MergedDictionaries>
-
-			<Style TargetType="Image">
-				<Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
-			</Style>
-		</ResourceDictionary>
-	</UserControl.Resources>
-
-	<Grid x:Name="WindowTitleBar"
-		  DockPanel.Dock="Top"
-		  MouseLeftButtonDown="TitleBarMouseLeftButtonDown"
-		  Background="Transparent">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="Auto" />
-		</Grid.ColumnDefinitions>
-
-		<Grid Grid.Column="0">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="Auto" />
-				<RowDefinition Height="*" />
-			</Grid.RowDefinitions>
-		</Grid>
-
-		<DockPanel Grid.Row="1">
-			<Image Grid.Row="0"
-				   Grid.ColumnSpan="2"
-				   Source="../Resources/lwHeader_Main.png"
-				   Height="48"/>
-		</DockPanel>
-	</Grid>
-</UserControl>
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 mc:Ignorable="d" />
