--- a/LanguageWeaverProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
+++ b/LanguageWeaverProvider/LanguageMappingProvider/View/LanguageMappingProviderView.xaml
@@ -16,10 +16,11 @@
 		WindowStartupLocation="CenterScreen"
 		WindowStyle="None"
 		ResizeMode="CanResize"
-		MinWidth="600"
-		Width="800"
-		MinHeight="400"
-		Height="600"
+		MinWidth="768"
+		Width="768"
+		MinHeight="720"
+		Height="720"
+		MaxHeight="720"
 		MouseLeftButtonDown="Window_MouseLeftButtonDown"
 		Loaded="Window_Loaded"
 		Closing="Window_Closing"
@@ -106,7 +107,8 @@
 					  CanUserSortColumns="True"
 					  CanUserAddRows="False"
 					  CanUserDeleteRows="False"
-					  Margin="16 16 16 0">
+					  Margin="16 16 16 0"
+					  AutomationProperties.Name="Language Mapping Table">
 				<DataGrid.Columns>
 					<DataGridTextColumn Header="{x:Static root:PluginResources.LMPView_Headers_Language}"
 										Binding="{Binding Path=Name}"
@@ -135,7 +137,6 @@
 
 			<TextBlock Grid.Row="3"
 					   Grid.ColumnSpan="2"
-					   Focusable="True"
 					   Margin="16 4">
 				<Run Text="{x:Static root:PluginResources.LMPView_Languages_TotalCount}" />
 				<Run Text="{Binding MappedLanguages.Count, Mode=OneWay}" />
